// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MarkdownModal renders correctly when it's active 1`] = `
<div
  className="modal is-active"
>
  <div
    className="modal-background"
  />
  <div
    className="modal-card"
  >
    <div
      className="modal-card-head"
    >
      <p
        className="modal-card-title"
      >
        Preview
      </p>
      <button
        aria-label="close"
        className="delete"
        onClick={[Function]}
      />
    </div>
    <div
      className="modal-card-body"
    >
      <Markdown
        text="Test active text."
      />
    </div>
    <div
      className="modal-card-foot"
    >
      <button
        className="button"
        onClick={[Function]}
      >
        <i
          className="fas fa-arrow-left"
        />
          Close
      </button>
    </div>
  </div>
</div>
`;

exports[`MarkdownModal renders correctly when it's not active 1`] = `
<div
  className="modal"
>
  <div
    className="modal-background"
  />
  <div
    className="modal-card"
  >
    <div
      className="modal-card-head"
    >
      <p
        className="modal-card-title"
      >
        Preview
      </p>
      <button
        aria-label="close"
        className="delete"
        onClick={[Function]}
      />
    </div>
    <div
      className="modal-card-body"
    >
      <Markdown
        text="Test inactive text."
      />
    </div>
    <div
      className="modal-card-foot"
    >
      <button
        className="button"
        onClick={[Function]}
      >
        <i
          className="fas fa-arrow-left"
        />
          Close
      </button>
    </div>
  </div>
</div>
`;
